  javascript being enabled for `qute://` and `chrome://` pages) anymore.
- The `qute-lastpass` userscript now stops prompting for passwords when
  cancelling the password input.
- The tab hover text now shows ampersands (&) correctly.
- With QtWebEngine and Qt >= 5.11, the inspector now shows its icons correctly
  even if loading of images is disabled via the `content.images` setting.
- Various improvements for URL/searchengine detection:
  - Strings with a dot but with characters not allowed in a URL (e.g. an
    underscore) are now not treated as URL anymore.
  - Strings like "5/8" are now not treated as IP anymore.
  - URLs with an explicit scheme and a space (%20) are correctly treated as
    URLs.
  - Mail addresses are now treated as search terms.
  - With `url.open_base_url` set, searching for a search engine name now works.
  - `url.open_base_url = True` together with `url.auto_search = 'never'` is now
    handled correctly.
  - Fixed crash when a search engine URL turns out to be invalid.
- Site specific quirks which work around some broken websites:
  - WhatsApp Web
  - Google Accounts
  - Slack (with older QtWebEngine versions)
  - Dell.com support pages (with Qt 5.7)
  - Google Docs (fixes broken IME/compose key)

v1.8.3 (2019-12-05)
-------------------

Fixed
~~~~~

- Segmentation fault introduced in v1.8.2 when a tab gets closed immediately
  after it has finished loading (e.g. with certain login flows).

v1.8.2 (2019-11-22)
-------------------

Changed
~~~~~~~

- Windows/macOS releases now ship with Qt 5.12.6. This includes security fixes
  up to Chromium 77.0.3865.120 plus a security fix for CVE-2019-13720 from
  Chromium 78.

Fixed
~~~~~

- Unbinding keys via `config.bind(key, None)` accidentally worked in
  v1.7.0 but raises an exception in v1.8.0. It now works again, but is
  deprecated and shows an error. Note that `:config-py-write` did write
  such invalid lines before v1.8.0, so existing config files might need
  adjustments.